--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <li>Quarta</li>
             <li>Quinta</li>
             <li>Sexta</li>
+            <li>Sabado</li>
+            <li>Domingo</li>
         </ul>
     </div>
     
